EDOSPNC-969 Fix trombone toujours visible

--- a/src/app/modules/congratulation-letter/components/congratulation-letter-card/congratulation-letter-card.component.scss
+++ b/src/app/modules/congratulation-letter/components/congratulation-letter-card/congratulation-letter-card.component.scss
@@ -22,16 +22,16 @@ congratulation-letter-card {
             flex: 2;
         }
 
-        .actions {
-            width: 30px;
-            text-align: center;
-        }
 
         .user-actions {
-            width: 83px;
-            display: inline-flex;
+            width: 120px;
+            display: flex;
             align-items: center;
             justify-content: flex-end;
+
+            & > * {
+                margin-left: 10px;
+            }
 
             button.detail-button {
                 background: color($colors, primary-light);
@@ -45,9 +45,23 @@ congratulation-letter-card {
                 }
             }
 
-            #attach-icon {
-                margin-right: 8px;
+            .attach-icon {
+                margin-right: 15px;
+                font-size: 2em;
             }
+
+            .actions-button {
+                background: transparent;
+                color: color($colors, primary-light);
+                width: 30px;
+                height: 30px;
+                box-shadow: none;
+
+                ion-icon {
+                    font-size: 2em;
+                }
+            }
+
         }
     }
 }
