--- a/src/app/modules/congratulation-letter/components/congratulation-letter-list/congratulation-letter-list.component.scss
+++ b/src/app/modules/congratulation-letter/components/congratulation-letter-list/congratulation-letter-list.component.scss
@@ -31,7 +31,7 @@ congratulation-letter-list {
         }
 
         .button-placeholder {
-            width: 30px;
+            width: 90px;
         }
 
         .action-placeholder {
